Fix text styling on mobile devices

--- a/app/styles/text.scss
+++ b/app/styles/text.scss
@@ -247,7 +247,7 @@ h4 {
 
 h5 {
 
-	width:70%;
+	width:85%;
 	font-size:24px;
 	font-weight:500;
 	line-height:1.3;
@@ -316,11 +316,6 @@ h5 {
 	}
 
 	&[white] {
-		color:var(--white-color);
-	}
-
-	&[careers] {
-		width:85%;
 		color:var(--white-color);
 	}
 
